--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,23 @@
   padding: 0;
   margin: 0;
 }
+
+.btn {
+  font-family: 'Red Rose';
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding: 15px 26px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-header {
+  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
+  border-radius: 10px;
+  padding: 15px 26px;
+}
+
+.btn-hero {
+  border-right: 10px;
+}
