--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,15 @@
   background: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
   border-radius: 8px;
 }
+
+@media screen and (max-width: 820px) {
+  .btn {
+    font-size: 14px;
+    line-height: 18px;
+    padding: 10px 20px;
+  }
+
+  .btn-hero {
+    padding: 16px 30px;
+  }
+}
